fix line break on iphone 5 of download link

--- a/client/src/dashboard/styles/dashboard/_dashboard.scss
+++ b/client/src/dashboard/styles/dashboard/_dashboard.scss
@@ -137,6 +137,12 @@
     color: $brand-primary-colour;
     border-bottom: 0;
     text-decoration: underline;
+    margin-right: 0;
+
+    @media(min-width: $screen-sm) {
+      margin-right: 1.6em;
+    }
+
 
     &:hover {
       color: $white;
